# meuble_market

./: .gitignore  README.md  pyproject.toml
src/apps/api/: urls.py
src/apps/api/users/: routers.py  serializers.py  viewsets.py
src/apps/cart/: admin.py  models.py
src/apps/delivery/: admin.py  models.py
src/apps/products/: admin.py  models.py
src/apps/shop/: admin.py  models.py
src/apps/users/: admin.py  manager.py  models.py  permissions.py  validator.py
src/core/: urls.py
src/core/settings/: base.py  development.py
